# talk-trace

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker.yml  test.yml
.windsurf/rules/: 01-core-rules.md  02-testing.md  03-git-and-commits.md  04-code-quality.md  05-memory-and-context.md  06-security-and-best-practices.md  07-pr-review-simulation.md  08-git-flow-enforcement.md  09-pr-and-review.md  10-linting-and-formatting.md  11-openapi-contract.md
docs/: architecture.md
services/orchestrator/: Dockerfile  README.md  requirements.txt
services/orchestrator/app/: main.py
services/orchestrator/app/api/routes/: health.py  sessions.py
services/orchestrator/app/api/schemas/: sessions.py
services/orchestrator/app/application/: session_service.py
services/orchestrator/app/config/: settings.py
services/orchestrator/app/domain/: ports.py  session.py
services/orchestrator/app/infrastructure/: artifact_store_fs.py  recorder_ffmpeg.py
services/orchestrator/tests/: conftest.py  test_artifacts.py  test_health.py  test_sessions.py
services/transcriber/: Dockerfile  README.md  openapi.yaml  requirements.txt
services/transcriber/app/: main.py
services/transcriber/app/api/routes/: health.py  transcribe.py
services/transcriber/app/api/schemas/: transcribe.py
services/transcriber/app/application/: transcribe_service.py
services/transcriber/app/config/: settings.py
services/transcriber/app/domain/: ports.py
services/transcriber/app/infrastructure/: audio_store_fs.py  faster_whisper_transcriber.py  transcriber_factory.py  whisper_transcriber.py
services/transcriber/tests/: test_api.py  test_audio_store.py  test_faster_whisper_transcriber.py  test_health.py  test_strategy_pattern.py  test_transcribe_service.py  test_transcriber_factory_updated.py
